--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,8 @@ header {
     height: 100%;
     width: 100%;
     position: absolute; }
+  header .svg_heading {
+    fill: #fff; }
   header a:hover {
     color: #ffd773;
     filter: progid:DXImageTransform.Microsoft.DropShadow(offX=0, offY=0, color=#ffd773, positive=true);
@@ -144,8 +146,8 @@ header {
 .about_block li:before {
   content: " ";
   position: absolute;
-  height: 7px;
-  width: 7px;
+  height: 9px;
+  width: 9px;
   left: -17px;
   background: #ffd773;
   border-radius: 19px;
@@ -155,14 +157,250 @@ header {
 
 /*news block*/
 .news_block {
+  position: relative;
   background: url("../img/Bg_news.png");
   background-size: cover;
   background-position-y: bottom;
   background-position-x: center;
-  height: 520px; }
+  height: 520px;
+  z-index: 2;
+  top: 10px; }
+  .news_block h2 {
+    font-family: "Museo_Cyrl_700"; }
 
-/*28.12.18*/
-.test {
-  background: red; }
+.img_news {
+  padding-top: 65%; }
 
-/*# sourceMappingURL=main.css.map */
+.name_news {
+  color: #0a0f28;
+  font-size: 20px;
+  line-height: 1;
+  font-family: "Museo_Cyrl_700"; }
+
+.name_news:hover, .data_news:hover {
+  color: #ffd773;
+  text-decoration: none; }
+
+.data_news {
+  color: #ffd773;
+  font-family: "Museo_Cyrl_700"; }
+
+.black_button {
+  background: #0a0f28;
+  border-radius: 5px; }
+  .black_button span {
+    font-family: "Museo_Cyrl_700";
+    font-size: 20px; }
+
+.black_button:hover {
+  background: #ffd773;
+  text-decoration: none; }
+  .black_button:hover span {
+    color: #0a0f28; }
+
+/*mab block*/
+.map_block {
+  position: relative; }
+  .map_block #map {
+    position: absolute;
+    top: 0; }
+  .map_block .container {
+    z-index: 1; }
+    .map_block .container .col-lg-5 {
+      z-index: 1;
+      background: #ffd773;
+      border-radius: 10px; }
+      .map_block .container .col-lg-5 h2 {
+        font-family: "Museo_Cyrl_700"; }
+      .map_block .container .col-lg-5 .news_heading_block {
+        font-family: "Museo_Cyrl_700"; }
+      .map_block .container .col-lg-5 p {
+        line-height: 1; }
+        .map_block .container .col-lg-5 p a {
+          color: #0a0f28; }
+        .map_block .container .col-lg-5 p a:hover {
+          color: #0a0f28;
+          text-decoration: none; }
+
+footer {
+  position: relative;
+  background: url(../img/Bg_footer.png);
+  background-size: cover;
+  background-position-y: bottom;
+  background-position-x: center;
+  height: 119px;
+  z-index: 2;
+  top: 0px; }
+  footer .cls-1 {
+    fill: #000;
+    fill-rule: evenodd; }
+  footer .name {
+    font-family: "Museo_Cyrl_700";
+    font-size: 40px;
+    line-height: 1;
+    color: #0a0f28; }
+  footer .col-lg-8 ul {
+    width: 100%;
+    padding-left: 20px; }
+  footer .nav-item {
+    list-style: none; }
+  footer .nav-link {
+    font-size: 17px;
+    padding: 0 20px 0 0;
+    color: #0a0f28; }
+  footer .nav-link:hover {
+    color: #fff; }
+  footer .col-lg-1 a {
+    font-size: 18px;
+    padding: 6px 6px 0 6px;
+    color: #0a0f28; }
+  footer .col-lg-1 a:hover {
+    color: #fff; }
+  footer .feedback {
+    color: #0a0f28;
+    font-size: 20px; }
+  footer .feedback:hover {
+    color: #fff;
+    text-decoration: none; }
+  footer .home_link {
+    height: 100%;
+    width: 100%;
+    position: absolute; }
+
+.modal_feedback .modal-content {
+  border-radius: 0; }
+.modal_feedback .modal-header {
+  border-bottom: 0; }
+  .modal_feedback .modal-header .close:focus {
+    outline: none; }
+.modal_feedback .modal-footer {
+  padding: 0;
+  border: 0; }
+.modal_feedback .modal-body {
+  text-align: center;
+  padding-top: 0;
+  padding-left: 60px;
+  padding-right: 60px; }
+  .modal_feedback .modal-body h5 {
+    font-family: "Museo_Cyrl_700";
+    font-size: 37px;
+    line-height: 1; }
+  .modal_feedback .modal-body p {
+    font-size: 20px; }
+  .modal_feedback .modal-body .form_block {
+    text-align: left;
+    padding-left: 60px;
+    padding-right: 60px; }
+    .modal_feedback .modal-body .form_block .form-control:focus {
+      color: #495057;
+      background-color: #fff;
+      border-color: #ffd773;
+      outline: 0;
+      box-shadow: 0 0 0 0.2rem #ffc10738; }
+  .modal_feedback .modal-body .personal_information {
+    font-size: 16px;
+    color: #dcdce1; }
+    .modal_feedback .modal-body .personal_information a {
+      color: #dcdce1; }
+  .modal_feedback .modal-body .login {
+    padding-left: 60px;
+    padding-right: 60px; }
+    .modal_feedback .modal-body .login .btn-header {
+      width: 100%;
+      background: #ffd773;
+      color: #0a0f28; }
+    .modal_feedback .modal-body .login .btn-header:hover {
+      background: #0a0f28;
+      color: #fff; }
+
+.fly_mobile_menu {
+  height: 60px;
+  position: fixed;
+  z-index: 11;
+  top: 0;
+  width: 100%;
+  background: #0a0f28; }
+  .fly_mobile_menu .navbar-galan {
+    background: none;
+    border: none;
+    cursor: pointer; }
+    .fly_mobile_menu .navbar-galan .icon-bar {
+      width: 21px;
+      height: 3px;
+      display: block;
+      background: #fff; }
+    .fly_mobile_menu .navbar-galan .icon-bar + .icon-bar {
+      margin-top: 3px; }
+  .fly_mobile_menu .color_logo_mobile {
+    fill: #fff; }
+  .fly_mobile_menu .col-8 .name {
+    color: #fff;
+    font-size: 30px;
+    padding-left: 10px;
+    line-height: 1; }
+  .fly_mobile_menu .home_link {
+    height: 100%;
+    width: 100%;
+    position: absolute; }
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width: 1200px) {
+  header .col-lg-2 .name {
+    font-size: 30px; }
+  header .col-lg-8 ul {
+    padding-left: 0px; }
+    header .col-lg-8 ul a {
+      padding: 0 16px 0 0; }
+  header .feedback {
+    font-size: 18px; }
+  header .head_center_text {
+    height: 390px; }
+
+  .about_block .col-lg-3 img {
+    width: 100%; }
+
+  .news_block {
+    top: 40px; }
+
+  .map_block {
+    top: 30px; }
+
+  footer .name {
+    font-size: 30px; }
+  footer .col-lg-7 .nav_top {
+    padding: 0; }
+  footer .nav-link {
+    padding: 0 10px 0 0; }
+  footer .col-lg-1 a {
+    padding: 6px 6px 0 4px; }
+  footer .feedback {
+    font-size: 18px; } }
+/* Medium Devices, Desktops */
+@media only screen and (max-width: 992px) {
+  header .col-lg-8 .nav-link {
+    padding: 0 8px 0 0;
+    font-size: 14px; }
+  header .feedback {
+    font-size: 13px; }
+  header .btn-header {
+    font-size: 14px; }
+  header .name_product {
+    font-size: 18px; }
+  header .bottom_list .col-lg-2 {
+    padding: 0; }
+  header .image_block {
+    height: 90px; }
+
+  .news_block {
+    height: auto;
+    top: 50px; }
+
+  footer {
+    height: auto; }
+    footer .nav-link {
+      font-size: 16px; } }
+/* Small Devices, Tablets */
+@media only screen and (max-width: 768px) {
+  header {
+    height: auto; } }
+/* Extra Small Devices, Phones */
