--- a/css/main.scss
+++ b/css/main.scss
@@ -110,6 +110,9 @@ header{
     width: 100%;
     position: absolute;
   }
+  .svg_heading{
+    fill: #fff;
+  }
   a:hover{
     color: $color_link_hover;
     filter: progid:DXImageTransform.Microsoft.DropShadow(offX=0, offY=0, color=#ffd773, positive=true);
@@ -186,8 +189,8 @@ header{
   li:before{
     content: " ";
     position: absolute;
-    height: 7px;
-    width: 7px;
+    height: 9px;
+    width: 9px;
     left: -17px;
     background: $bg_yellow;
     border-radius: 19px;
@@ -199,13 +202,346 @@ header{
 }
 /*news block*/
 .news_block{
+  position: relative;
   background: url("../img/Bg_news.png");
   background-size: cover;
   background-position-y: bottom;
   background-position-x: center;
   height: 520px;
+  z-index: 2;
+  top: 10px;
+
+  h2{
+    font-family: $font_bold;
+  }
 }
-/*28.12.18*/
-.test{
-  background: red;
+.img_news{
+  padding-top: 65%;
+}
+.name_news{
+  color: $text_color;
+  font-size: 20px;
+  line-height: 1;
+  font-family: $font_bold;
+}
+.name_news:hover, .data_news:hover{
+  color: $color_link_hover;
+  text-decoration: none;
+}
+.data_news{
+  color: $color_link_hover;
+  font-family: $font_bold;
+}
+.black_button{
+  background: $text_color;
+  border-radius: 5px;
+  span{
+    font-family: $font_bold;
+    font-size: 20px;
+  }
+}
+.black_button:hover{
+  background: $bg_yellow;
+  text-decoration: none;
+  span{
+    color: $text_color;
+  }
+}
+/*mab block*/
+.map_block{
+  position: relative;
+  #map{
+    position: absolute;
+    top: 0;
+  }
+  .container{
+    z-index: 1;
+    .col-lg-5{
+      z-index: 1;
+      background: $bg_yellow;
+      border-radius: 10px;
+      h2{
+        font-family: $font_bold;
+      }
+      .news_heading_block{
+        font-family: $font_bold;
+      }
+      p{
+        line-height: 1;
+        a{
+          color: $text_color;
+        }
+        a:hover{
+          color: $text_color;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+}
+footer{
+  position: relative;
+  background: url(../img/Bg_footer.png);
+  background-size: cover;
+  background-position-y: bottom;
+  background-position-x: center;
+  height: 119px;
+  z-index: 2;
+  top: 0px;
+  .cls-1 {
+    fill: #000;
+    fill-rule: evenodd;
+  }
+  .name{
+    font-family: $font_bold;
+    font-size: 40px;
+    line-height: 1;
+    color: $text_color;
+  }
+  .col-lg-8 ul {
+    width: 100%;
+    padding-left: 20px;
+  }
+  .nav-item {
+    list-style: none;
+  }
+  .nav-link {
+    font-size: 17px;
+    padding: 0 20px 0 0;
+    color: $text_color;
+  }
+  .nav-link:hover{
+    color: $color_link;
+  }
+  .col-lg-1{
+    a{
+      font-size: 18px;
+      padding: 6px 6px 0 6px;
+      color: $text_color;
+    }
+    a:hover{
+      color: $color_link;
+    }
+  }
+  .feedback{
+    color: $text_color;
+    font-size: 20px;
+  }
+  .feedback:hover{
+    color: $color_link;
+    text-decoration: none;
+  }
+  .home_link{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
+}
+.modal_feedback{
+  .modal-content{
+    border-radius: 0;
+  }
+  .modal-header{
+    border-bottom: 0;
+    .close:focus{
+      outline: none;
+    }
+  }
+  .modal-footer{
+    padding: 0;
+    border: 0;
+  }
+  .modal-body{
+    text-align: center;
+    padding-top: 0;
+    padding-left: 60px;
+    padding-right: 60px;
+    h5{
+      font-family: $font_bold;
+      font-size: 37px;
+      line-height: 1;
+    }
+    p{
+      font-size: 20px;
+    }
+    .form_block{
+      text-align: left;
+      padding-left: 60px;
+      padding-right: 60px;
+      .form-control:focus {
+        color: #495057;
+        background-color: #fff;
+        border-color: $color_link_hover;
+        outline: 0;
+        box-shadow: 0 0 0 0.2rem #ffc10738;
+      }
+    }
+    .personal_information{
+      font-size: 16px;
+      color: #dcdce1;
+      a{
+        color: #dcdce1;
+      }
+    }
+    .login{
+      padding-left: 60px;
+      padding-right: 60px;
+      .btn-header{
+        width: 100%;
+        background: $bg_yellow;
+        color: $text_color;
+      }
+      .btn-header:hover{
+        background: $bg_blue;
+        color: $color_link;
+      }
+    }
+  }
+}
+.fly_mobile_menu{
+  height: 60px;
+  position: fixed;
+  z-index: 11;
+  top: 0;
+  width: 100%;
+  background: $bg_blue;
+  .navbar-galan{
+    background: none;
+    border: none;
+    cursor: pointer;
+    .icon-bar{
+      width: 21px;
+      height: 3px;
+      display: block;
+      background: #fff;
+    }
+    .icon-bar+.icon-bar{
+      margin-top: 3px;
+    }
+  }
+  .color_logo_mobile{
+    fill: #fff;
+  }
+  .col-8{
+    .name{
+      color:$color_link;
+      font-size: 30px;
+      padding-left: 10px;
+      line-height: 1;
+    }
+  }
+  .home_link {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
+}
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1200px) {
+  header{
+    .col-lg-2{
+      .name{
+        font-size: 30px;
+      }
+    }
+    .col-lg-8{
+      ul{
+        padding-left: 0px;
+        a{
+          padding: 0 16px 0 0;
+        }
+      }
+    }
+    .feedback {
+      font-size: 18px;
+    }
+    .head_center_text {
+      height: 390px;
+    }
+  }
+  .about_block{
+    .col-lg-3{
+      img{
+        width: 100%;
+      }
+    }
+  }
+  .news_block{
+    top: 40px;
+  }
+  .map_block {
+    top: 30px;
+  }
+  footer{
+    .name{
+      font-size: 30px;
+    }
+    .col-lg-7{
+      .nav_top{
+        padding: 0;
+      }
+    }
+    .nav-link{
+      padding: 0 10px 0 0;
+    }
+    .col-lg-1{
+      a{
+        padding: 6px 6px 0 4px;
+       }
+    }
+    .feedback {
+      font-size: 18px;
+    }
+  }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+ header{
+   .col-lg-8{
+     .nav-link{
+       padding: 0 8px 0 0;
+       font-size: 14px;
+     }
+   }
+   .feedback{
+     font-size: 13px;
+   }
+   .btn-header{
+     font-size: 14px;
+   }
+   .name_product{
+     font-size: 18px;
+   }
+   .bottom_list{
+     .col-lg-2{
+       padding: 0;
+     }
+   }
+   .image_block{
+     height: 90px;
+   }
+ }
+  .news_block{
+    height: auto;
+    top:50px;
+  }
+  footer{
+    height: auto;
+    .nav-link{
+      font-size:16px;
+    }
+  }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+  header{
+    height: auto;
+  }
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+
 }
